--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,10 @@
+<IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L] 
+</IfModule>
+php_value upload_max_filesize 1024M
+php_value post_max_size 1024M
+php_value max_execution_time 1000
+php_value max_input_time 1000
